--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ language: node_js
 jobs:
   include:
     - stage: build docker image
-      on:
-        tags: true
+      if: tag IS present
       before_install:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       install:
