--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
       before_install:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - echo `git tag -l --points-at HEAD | tail -1`
+      - env
       install:
       - docker build -t "$DOCKER_USERNAME/core:latest" .
       script:
