--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,14 @@ jobs:
   include:
     - stage: build docker image
       if: tag IS present
-      before_install:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      install:
-      - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
       script:
-      - docker push "$DOCKER_USERNAME/core:$TRAVIS_TAG"
-
+      - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
+    - stage: test docker image
+      if: tag IS present
+      script:
+      - docker run --entrypoint '' "$DOCKER_USERNAME/core:$TRAVIS_TAG" npm test
+    - stage: push docker image
+      if: tag IS present
+      script:
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
