--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,11 @@ dist: xenial
 language: node_js
 jobs:
   include:
-    - stage: build docker image
+    - stage: build docker image, test and push it
       if: tag IS present
       install: true
       script:
       - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
-    - stage: test docker image
-      if: tag IS present
-      install: true
-      script:
       - docker run --entrypoint '' "$DOCKER_USERNAME/core:$TRAVIS_TAG" npm test
-    - stage: push docker image
-      if: tag IS present
-      install: true
-      script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
