--- a/package.json
+++ b/package.json
@@ -90,12 +90,10 @@
     "coveralls": "=2.11.16",
     "crypto-browserify": "=3.11.0",
     "csv": "=1.1.1",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
     "faker": "=3.1.0",
     "grunt": "^1.0.3",
     "grunt-cli": "=1.2.0",
