--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ jobs:
       if: tag IS present
       install: true
       script:
-      - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
-      - docker run --entrypoint '' "$DOCKER_USERNAME/core:$TRAVIS_TAG" npm test
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" .
+      - |
+        docker build -t "$DOCKER_USERNAME/core:$TRAVIS_TAG" . && \
+        docker run --entrypoint '' "$DOCKER_USERNAME/core:$TRAVIS_TAG" npm test && \
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && \
+        docker push "$DOCKER_USERNAME/core:$TRAVIS_TAG"
